namespace blueberry.Core;

public enum Status
{
    Created,
    Updated,
    Deleted,
    NotFound,
    BadRequest,
    Conflict
}